# lazytrans

./: .gitignore  AGENTS.md  README.md  components.json  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  global.d.ts  index-html.test.ts  main.tsx  window-shell.test.ts
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  shortcuts.rs  state.rs  tray.rs  window.rs
src/components/: HistoryPanel.tsx  SettingsPanel.tsx  TitleBar.tsx  TranslationInput.tsx  TranslationResult.tsx
src/lib/: app-behavior.ts  lazy-trans.ts  providers.ts  types.ts
src/main/: env.test.ts  env.ts  history.test.ts  history.ts  index.ts  preferences.test.ts  preferences.ts  providers.test.ts  selection.test.ts  selection.ts  settings.test.ts  settings.ts  shortcuts.test.ts  shortcuts.ts  translate-cache.test.ts  translate-cache.ts  translate-flow.test.ts  translate-flow.ts  translation-errors.test.ts  translation-errors.ts  translator.test.ts  translator.ts  tray-icon-path.test.ts  tray-icon-path.ts  tray.test.ts  tray.ts  window-manager.test.ts  window-manager.ts  window-state.test.ts  window-state.ts  window.test.ts  window.ts
src/preload/: index.test.ts  index.ts
src/renderer/: index.html
tauri/: package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: commands.rs  env.rs  errors.rs  lib.rs  main.rs  shortcuts.rs  spike_ax.rs  state.rs  tray.rs  window.rs  window_state.rs
tauri/src-tauri/src/selection/: mod.rs  permissions.rs  simulated_copy.rs
tauri/src-tauri/src/store/: history.rs  mod.rs
tauri/src-tauri/src/translator/: cache.rs  mod.rs
(+31 files in other folders)
