[package]
name = "lazytrans"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazytrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
core-graphics = "0.25"
core-foundation = "0.10"
accessibility-sys = "0.1"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
