[package]
name = "lazytrans"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazytrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-util = "0.7"

reqwest = { version = "0.13", features = ["stream", "json", "rustls"], default-features = false }
eventsource-stream = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"

objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
accessibility-sys = "0.1"
core-graphics = "0.25"
core-foundation = "0.10"

dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
